feat(protocol-core): cross-platform hybrid KEM (X25519+ML-KEM-768) for the PQ handshake
Add a uniform `kem.HybridKem` object on BOTH platforms (same-named object per the
protocol-core platform convention), so the cross-platform engine can later run a
post-quantum handshake with one API surface.

- JVM (`protocol-core/jvm/.../kem/HybridKem.scala`): a thin delegating adapter over
  the vetted `crypto.HybridKem` (X25519 via JCA + ML-KEM-768 via liboqs, plus its
  explicit low-order peer-key validation). No crypto reimplemented (Constitution I).
- JS (`protocol-core/js/.../kem/HybridKem.scala`): the same API over `@noble/curves`
  (X25519), `@noble/post-quantum` (ML-KEM-768), and `@noble/hashes` (SHA-256).
- Uniform opaque secret layout on both platforms:
  x25519Private(32) ++ x25519PublicRaw(32) ++ mlkemSecret(2400) = 2464.
- build.sbt: JVM-only `protocolCore.dependsOn(crypto)` (legal DAG edge, no cycle);
  `protocolCoreJS` untouched. Added `Test/fork` + `--enable-native-access` to
  protocolCore so its liboqs-backed spec matches the other native-touching modules.
- Widened `crypto.HybridKem.combine` from `private[crypto]` to public so the JVM
  adapter and the KAT share ONE combiner (pure, deterministic, already KAT-pinned).
- Constitution II: JS encaps/decaps best-effort zero derived secret material in a
  finally, mirroring the JVM path.

Interop is pinned on both platforms: the combiner KAT (fd00…69d8) and a JVM-generated
`(secret, ciphertext) -> sharedSecret` decapsulation vector, reproduced verbatim in
both specs. Since ML-KEM (noble≡liboqs, ACVP KAT), X25519 (RFC 7748), and the combiner
each match cross-platform, a shared decaps vector verifying on both proves the two
hybrid KEMs interoperate (this is a pinned KAT, not a live cross-process handshake).